--- a/doc/presentation/presentation.tex
+++ b/doc/presentation/presentation.tex
@@ -3,6 +3,7 @@
 \usepackage{float}
 \usepackage{subfig}
 \usepackage{graphicx}
+\usepackage{changepage}
 \graphicspath{{../figures/}}
 
 %Information to be included in the title page:
@@ -231,7 +232,7 @@
 	\frametitle{Monte carlo search agent}
 	\begin{figure}
 		\centering
-		\includegraphics[width=7cm, keepaspectratio]{mcts_algo.png}
+		\includegraphics[width=10cm, keepaspectratio]{mcts_algo.png}
 	\end{figure}
 \end{frame}
 
@@ -251,29 +252,12 @@
 
 \begin{frame}
 	\frametitle{Face-off}
-	\begin{table}
-		\begin{center}
-			\begin{tabular}{ | c | c | c | c | c | c | c | c | }
-				\hline
-				Black player               & White player        & \small{Marbles lost b} & \small{Marbles lost w} & \small{time p. move b} & \small{time p. move w} & \small{total moves (avg)} & n \\
-				\hline
-				AlphaBeta (d=3)            & Random              & 0.2                    & 6.0                    & 11.11                  & 0.0                    & 57.6                      & 5 \\
-				\hline
-				AlphaBeta (d=4)            & Random              & 0.0                    & 6.0                    & 142.8                  & 0.0                    & 52.4                      & 5 \\
-				\hline
-				AlphaBeta (d=3)            & AlphaBetaFast (d=3) & 6.0                    & 5.0                    & 10.02                  & 4.16                   & 92                        & 1 \\
-				\hline
-				MonteCarloPure (t=20s)     & RandomPlayer        & 5.0                    & 0.0                    & 20.33                  & 0.0                    & 1008.0                    & 1 \\
-				\hline
-				MonteCarloImproved (t=20s) & RandomPlayer        & 0.0                    & 6.0                    & 20.05                  & 0.0                    & 306.0                     & 1 \\
-				\hline
-				MonteCarloImproved (t=20s) & AlphaBetaFast (d=3) & 0.0                    & 6.0                    & 69.0                   & 20.06                  & 6.24                      & 1 \\
-				\hline
-			\end{tabular}
-		\end{center}
-		\label{node_count}
-		\caption{Face-off results}
-	\end{table}
+	\begin{adjustwidth}{-5in}{-5in}% adjust the L and R margins by 1 inch
+		\begin{figure}
+			\centering
+			\includegraphics[width=12cm, keepaspectratio]{face_off_table.png}
+		\end{figure}
+	\end{adjustwidth}
 \end{frame}
 
 \begin{frame}
